Add Provider in project

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   splash_screen_view: ^3.0.0
   http: ^0.13.3
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
