--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   splash_screen_view: ^3.0.0
   http: ^0.13.3
   provider: ^5.0.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
