--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,8 +17,9 @@ dependencies:
   http: ^0.13.3
   provider: ^5.0.0
   intl: ^0.17.0  
-  image_picker: ^0.8.1+1
+  image_picker: 0.6.6+5
   image_cropper: ^1.4.1
+  
 
 dev_dependencies:
   flutter_test:
